# mathbot

./: .gitignore  CHANGELOG.md  CLAUDE.md  MATHBOT_PROBLEMS_PROPOSAL.md  MATHBOT_PROBLEMS_PROPOSALS_v2.md  MATHBOT_PROBLEMS_PROPOSAL_v2.md  MATHBOT_RUBRICS.md  MATHBOT_TEMPLATE_GRADING.md  README.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  TECHDEBT.md  audit_templates.py  examples.py  mathbot-phase-gamma-seed.md  mathbot-phase4-problem-proposals.md  mathbot-phase4-template-corpus-cleanup.md  output_grading_k1_post.json  pyproject.toml  sample_all.sh  test_generator.py
.claude/: CLAUDE.md
.github/: copilot-instructions.md
docs/: INDEX.md  K10_PROBLEMS.md  K11_PROBLEMS.md  K12_PROBLEMS.md  K1_PROBLEMS.md  K1_PROBLEMS_DONE.md  K2_PROBLEMS_DONE.md  K3_PROBLEMS.md  K4_PROBLEMS.md  K5_PROBLEMS_DONE.md  K6_PROBLEMS_DONE.md  K7_PROBLEMS.md  K8_PROBLEMS.md  K9_PROBLEMS.md
gol_plugin/: README.md  __init__.py  evaluator.py  generator.py  i18n.yaml  parser.py
output_grading_k1/: k1_easy_addition_01_anchor.json  k1_easy_comparing_01_anchor.json  k1_easy_comparing_02.json  k1_easy_counting_01_anchor.json  k1_easy_counting_02.json  k1_easy_length_01_anchor.json  k1_easy_length_02.json  k1_easy_patterns_01_anchor.json  k1_easy_patterns_02.json  k1_easy_shapes_01.json  k1_easy_skipcounting_01_anchor.json  k1_easy_skipcounting_02.json  k1_easy_subtraction_01_anchor.json  k1_easy_subtraction_02.json  k1_easy_time_01_anchor.json  k1_easy_time_02.json  k1_easy_weight_01_anchor.json  k1_hard_addition_01_anchor.json  k1_hard_addition_02.json  k1_hard_comparing_01_anchor.json  k1_hard_comparing_02.json  (+30 more)
(+1278 files in other folders)
