[project]
name = "mathbot"
version = "0.1.0"
description = "Procedurally-generated multi-step math word problems for LLM testing and general use"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faker>=20.0.0",
    "names>=0.3.0",
    "click>=8.0.0",
]

[project.scripts]
mathbot = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-click>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
